--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
           <span class="input-text">0</span>
         </div>
         <div class="outer-box">
-          <!-- <div class="inner-row">
+          <div class="inner-row">
             <button class="btn-primary">Sin</button>
             <button class="btn-primary">Cos</button>
             <button class="btn-primary">Tan</button>
             <button class="btn-primary">log</button>
-          </div> -->
+          </div>
           <div class="inner-row">
             <button class="btn-primary">x²</button>
             <button class="btn-primary">(</button>
